@@ -1283,7 +1283,7 @@ Node-copyfrom-path: x
         repos_url = self.make_client('d', 'dc')
         self.build_tree({'dc/bla': "data"})
         self.client_add("dc/bla")
-        self.client_set_prop("dc", "bzr:merge", "aghost\n")
+        self.client_set_prop("dc", "bzr:ancestry:v3-none", "aghost\n")
         self.client_commit("dc", "My Message")
         oldrepos = Repository.open("svn+"+repos_url)
         dir = BzrDir.create("f",format.get_rich_root_format())
@@ -1321,7 +1321,7 @@ Node-copyfrom-path: x
         repos_url = self.make_client('d', 'dc')
         self.build_tree({'dc/bla': "data"})
         self.client_add("dc/bla")
-        self.client_set_prop("dc", "bzr:merge", "a ghost\n")
+        self.client_set_prop("dc", "bzr:ancestry:v3-none", "a ghost\n")
         self.client_commit("dc", "My Message")
         oldrepos = Repository.open("svn+"+repos_url)
         dir = BzrDir.create("f",format.get_rich_root_format())
