@@ -108,7 +108,7 @@ class TreeBuildEditor(svn.delta.Editor):
         return file_id
 
     def change_dir_prop(self, id, name, value, pool):
-        from repository import (SVN_PROP_BZR_MERGE, SVN_PROP_SVK_MERGE, 
+        from repository import (SVN_PROP_BZR_ANCESTRY, SVN_PROP_SVK_MERGE, 
                         SVN_PROP_BZR_PREFIX, SVN_PROP_BZR_REVISION_INFO, 
                         SVN_PROP_BZR_FILEIDS, SVN_PROP_BZR_REVISION_ID,
                         SVN_PROP_BZR_BRANCHING_SCHEME)
@@ -117,7 +117,7 @@ class TreeBuildEditor(svn.delta.Editor):
             self.dir_revnum[id] = int(value)
         elif name == svn.core.SVN_PROP_IGNORE:
             self.dir_ignores[id] = value
-        elif name in (SVN_PROP_BZR_MERGE, SVN_PROP_BZR_FILEIDS,
+        elif name in (SVN_PROP_BZR_ANCESTRY, SVN_PROP_BZR_FILEIDS,
                       SVN_PROP_BZR_BRANCHING_SCHEME):
             if id != self.tree._inventory.root.file_id:
                 mutter('%r set on non-root dir!' % name)
